--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="1.CLR_Basics\1.CodeExecutionModelInCLR\CodeExecutionModelInCLR.cs" />
+    <Compile Include="1.CLR_Basics\1.CodeExecutionModelInCLR\SomeLibrary.cs" />
+    <Compile Include="1.CLR_Basics\1.CodeExecutionModelInCLR\Test.cs" />
+    <Compile Include="1.CLR_Basics\1.CodeExecutionModelInCLR\Testing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
