chapter5 in progress

--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -52,6 +52,8 @@
     <Compile Include="1_CLR_Basics\3_SharedAndStrongNameAssembly\Testing.cs" />
     <Compile Include="2_Type_Design\4_TypeBasics\Testing.cs" />
     <Compile Include="2_Type_Design\4_TypeBasics\TypeBasics.cs" />
+    <Compile Include="2_Type_Design\5_PrimitiveReferenceSignificantTypes\PrimitiveReferenceSignificantTypes.cs" />
+    <Compile Include="2_Type_Design\5_PrimitiveReferenceSignificantTypes\Testing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
