--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -56,6 +56,8 @@
     <Compile Include="2_Type_Design\5_PrimitiveReferenceSignificantTypes\Testing.cs" />
     <Compile Include="2_Type_Design\6_MembersAndTypes\MembersAndTypes.cs" />
     <Compile Include="2_Type_Design\6_MembersAndTypes\Testing.cs" />
+    <Compile Include="2_Type_Design\7_ConstantsAndFields\ConstantsAndFields.cs" />
+    <Compile Include="2_Type_Design\7_ConstantsAndFields\Testing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
