--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -60,6 +60,7 @@
     <Compile Include="2_Type_Design\7_ConstantsAndFields\Testing.cs" />
     <Compile Include="2_Type_Design\8_Methods\Methods.cs" />
     <Compile Include="2_Type_Design\8_Methods\Testing.cs" />
+    <Compile Include="2_Type_Design\9_Parameters\Parameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
