--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+CLR_VIA_C_SHARP/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+CLR_VIA_C_SHARP/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+CLR_VIA_C_SHARP/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+CLR_VIA_C_SHARP.v12.suo
+CLR_VIA_C_SHARP/bin/Debug/CLR_VIA_C_SHARP.vshost.exe
+CLR_VIA_C_SHARP/bin/Debug/CLR_VIA_C_SHARP.vshost.exe.config
+CLR_VIA_C_SHARP/bin/Debug/CLR_VIA_C_SHARP.vshost.exe.manifest
+CLR_VIA_C_SHARP/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
