chapter 11 in progress

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ CLR_VIA_C_SHARP/bin/Debug/CLR_VIA_C_SHARP.vshost.exe
 CLR_VIA_C_SHARP/bin/Debug/CLR_VIA_C_SHARP.vshost.exe.config
 CLR_VIA_C_SHARP/bin/Debug/CLR_VIA_C_SHARP.vshost.exe.manifest
 CLR_VIA_C_SHARP/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+CLR_VIA_C_SHARP.v12.suo
