chapter14 in progress

--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -66,6 +66,7 @@
     <Compile Include="2_Type_Design\8_Methods\Testing.cs" />
     <Compile Include="2_Type_Design\9_Parameters\Parameters.cs" />
     <Compile Include="2_Type_Design\Testing\Testing.cs" />
+    <Compile Include="3_BaseDataTypes\14_Strings\Strings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
