--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -71,6 +71,7 @@
     <Compile Include="3_BaseDataTypes\14_Strings\Testing.cs" />
     <Compile Include="3_BaseDataTypes\15_EnumsBitFlags\EnumsBitFlags.cs" />
     <Compile Include="3_BaseDataTypes\16_Arrays\Arrays.cs" />
+    <Compile Include="3_BaseDataTypes\17_Delegates\Delegates.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
