--- a/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
+++ b/CLR_VIA_C_SHARP/CLR_VIA_C_SHARP.csproj
@@ -73,6 +73,7 @@
     <Compile Include="3_BaseDataTypes\16_Arrays\Arrays.cs" />
     <Compile Include="3_BaseDataTypes\17_Delegates\Delegates.cs" />
     <Compile Include="3_BaseDataTypes\18_CustomAttributes\CustomAttributes.cs" />
+    <Compile Include="3_BaseDataTypes\19_NullAbleValueType\NullAbleValueType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
